--- a/src/index.pug
+++ b/src/index.pug
@@ -159,7 +159,10 @@ include template/head.pug
                 </div>
                 <div class="col-sm-6 col-ml-4 which__item">
                   <div class="visa-direction visa-direction_asia">
-                    <div class="visa-direction__illustr"></div>
+                    <div class="visa-direction__illustr">
+                      <img src="img/visa-direction/2_1.png" alt="">
+                      <img src="img/visa-direction/2_2.png" alt="">
+                    </div>
                     <div class="visa-direction__img" style="background-image: url(img/visa-direction/2.jpg)"></div>
                     <div class="visa-direction__holder">
                       <div class="visa-direction__content">
