--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -107,7 +107,7 @@ h3 {
   margin: 0 -10px 44px;
   border-bottom: none;
   @include bp($lg) {
-    margin: 0 -2% 64px;
+    margin: 0 -1.5% 64px;
   }
   &__item {
     padding: 0 10px;
@@ -124,7 +124,7 @@ h3 {
       flex: 1;
     }
     @include bp($lg) {
-      padding: 0 2%;
+      padding: 0 1.5%;
     }
   }
   a {
@@ -187,6 +187,7 @@ h3 {
 }
 .input {
   line-height: 80px;
+  height: 80px;
   padding: 0 37px;
   background: #dce1fa;
   border-radius: 40px;
@@ -649,6 +650,7 @@ button {
     opacity: .2;
     box-shadow: 0 7px 50px 0 #554dd9;
     z-index: -1;
+    width: 100%;
   }
 }
 .caption {
@@ -796,7 +798,6 @@ button {
     right: 30px;
     background: #ffe68c;
     height: 30px;
-    bottom: 1px;
     &:before,
     &:after {
       content: '';
@@ -1358,6 +1359,7 @@ button {
   &__shadow {
     position: absolute;
     bottom: 100px;
+    width: 100%;
     left: 75px;
     right: 75px;
     margin: 0 auto;
@@ -1375,6 +1377,7 @@ button {
     left: 0;
     right: 0;
     z-index: -1;
+    width: 100%;
     img {
       position: absolute;
       display: none;
@@ -1969,6 +1972,7 @@ button {
     margin: 0 auto;
     left: 0;
     right: 0;
+    width: 100%;
     img {
       position: absolute;
       display: none;
@@ -2274,6 +2278,7 @@ button {
     margin: 0 auto;
     left: 0;
     right: 0;
+    width: 100%;
     img {
       position: absolute;
       display: none;
@@ -2454,13 +2459,22 @@ button {
       line-height: 22px;
       color: #333;
       position: relative;
+      &:before {
+        content: "";
+        display: inline-block;
+        min-height: 79px;
+        visibility: hidden;
+        @include bp($sm) {
+          min-height: 84px;
+        }
+      }
       @include bp($sm) {
         min-height: 114px;
         font-size: 20px;
         line-height: 28px;
         padding: 20px 108px 20px 48px;
       }
-      &:before {
+      &:after {
         content: '';
         position: absolute;
         width: 14px;
@@ -2479,7 +2493,7 @@ button {
           right: 40px;
         }
       }
-      &.collapsed:before {
+      &.collapsed:after {
         transform: rotate(45deg);
       }
       &:hover {
@@ -2622,6 +2636,7 @@ button {
     margin: 0 auto;
     height: 76px;
     max-width: 1050px;
+    width: 100%;
     opacity: .2;
     box-shadow: 0 7px 50px 0 #554dd9;
     z-index: -1;
@@ -2698,6 +2713,7 @@ button {
     left: 0;
     right: 0;
     height: 100%;
+    width: 100%;
     img {
       position: absolute;
       display: none;
