--- a/src/template/scripts.pug
+++ b/src/template/scripts.pug
@@ -1,4 +1,6 @@
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="slick/slick.min.js"></script>
+<script src="js/svg4everybody.min.js"></script>
 <script src="js/main.js"></script>
+<script>svg4everybody();</script>
