--- a/visavia/css/main.css
+++ b/visavia/css/main.css
@@ -231,6 +231,7 @@ h3 {
 
 .input {
   line-height: 80px;
+  height: 80px;
   padding: 0 37px;
   background: #dce1fa;
   border-radius: 40px;
@@ -732,6 +733,7 @@ button {
   opacity: .2;
   box-shadow: 0 7px 50px 0 #554dd9;
   z-index: -1;
+  width: 100%;
 }
 
 .caption {
@@ -884,7 +886,6 @@ button {
   right: 30px;
   background: #ffe68c;
   height: 30px;
-  bottom: 1px;
 }
 
 .caption__bottom:before,
@@ -1362,6 +1363,7 @@ button {
 .reasons__shadow {
   position: absolute;
   bottom: 100px;
+  width: 100%;
   left: 75px;
   right: 75px;
   margin: 0 auto;
@@ -1380,6 +1382,7 @@ button {
   left: 0;
   right: 0;
   z-index: -1;
+  width: 100%;
 }
 
 .reasons__illustr img {
@@ -1913,6 +1916,7 @@ button {
   margin: 0 auto;
   left: 0;
   right: 0;
+  width: 100%;
 }
 
 .steps__illustr img {
@@ -2224,6 +2228,7 @@ button {
   margin: 0 auto;
   left: 0;
   right: 0;
+  width: 100%;
 }
 
 .calc__illustr img {
@@ -2405,6 +2410,13 @@ button {
 }
 
 .faq-list__btn:before {
+  content: "";
+  display: inline-block;
+  min-height: 79px;
+  visibility: hidden;
+}
+
+.faq-list__btn:after {
   content: '';
   position: absolute;
   width: 14px;
@@ -2419,7 +2431,7 @@ button {
   transition: .3s;
 }
 
-.faq-list__btn.collapsed:before {
+.faq-list__btn.collapsed:after {
   transform: rotate(45deg);
 }
 
@@ -2546,6 +2558,7 @@ button {
   margin: 0 auto;
   height: 76px;
   max-width: 1050px;
+  width: 100%;
   opacity: .2;
   box-shadow: 0 7px 50px 0 #554dd9;
   z-index: -1;
@@ -2619,6 +2632,7 @@ button {
   left: 0;
   right: 0;
   height: 100%;
+  width: 100%;
 }
 
 .reviews__illustr img {
@@ -3039,6 +3053,10 @@ button {
     margin-bottom: 0;
   }
 
+  .faq-list__btn:before {
+    min-height: 84px;
+  }
+
   .faq-list__btn {
     min-height: 114px;
     font-size: 20px;
@@ -3046,7 +3064,7 @@ button {
     padding: 20px 108px 20px 48px;
   }
 
-  .faq-list__btn:before {
+  .faq-list__btn:after {
     width: 20px;
     height: 20px;
     right: 40px;
@@ -3341,11 +3359,11 @@ button {
 
 @media (min-width: 1150px) {
   .nav-tabs {
-    margin: 0 -2% 64px;
+    margin: 0 -1.5% 64px;
   }
 
   .nav-tabs__item {
-    padding: 0 2%;
+    padding: 0 1.5%;
   }
 
   .nav-tabs a {
