--- a/src/index.pug
+++ b/src/index.pug
@@ -756,21 +756,40 @@ include template/head.pug
                   </div>
                 </li>
                 <li>
-                  <a href="#" class="faq-list__btn collapsed" data-toggle="collapse" data-target="#scroll-down3" aria-expanded="false" aria-controls="scroll-down3"><span>Какой пакет документов подготовите  вы для меня?</span></a>
+                  <a href="#" class="faq-list__btn collapsed" data-toggle="collapse" data-target="#scroll-down3" aria-expanded="false" aria-controls="scroll-down3"><span>Включены ли в стоимость консульские и визовые сборы?</span></a>
                   <div class="collapse" id="scroll-down3" data-parent="#accordion">
-                    <div class="faq-list__content">3</div>
+                    <div class="faq-list__content"><p>Да, все сборы включены в стоимость визы, и она не меняется после подписания договора.</p></div>
                   </div>
                 </li>
                 <li>
-                  <a href="#" class="faq-list__btn collapsed" data-toggle="collapse" data-target="#scroll-down4" aria-expanded="false" aria-controls="scroll-down4"><span>Включены ли в стоимость консульские  и визовые сборы?</span></a>
+                  <a href="#" class="faq-list__btn collapsed" data-toggle="collapse" data-target="#scroll-down4" aria-expanded="false" aria-controls="scroll-down4"><span>Сроки выдачи визы</span></a>
                   <div class="collapse" id="scroll-down4" data-parent="#accordion">
-                    <div class="faq-list__content">4</div>
+                    <div class="faq-list__content">
+                      <ul class="checked-list mb-3">
+                        <li>
+                          +icon('check')
+                          <span>Срочная виза делается от 1 до 3 дней. Цена растет от степени срочности.</span>
+                        </li>
+                        <li>
+                          +icon('check')
+                          <span>Не срочная виза – в течение 10 дней. </span>
+                        </li>
+                        <li>
+                          +icon('check')
+                          <span>Сроки выдачи зависят от того, насколько быстро нужна вам виза. </span>
+                        </li>
+                        <li>
+                          +icon('check')
+                          <span>Чем раньше вы подадите заявку, тем дешевле будет виза.</span>
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                 </li>
                 <li>
-                  <a href="#" class="faq-list__btn collapsed" data-toggle="collapse" data-target="#scroll-down5" aria-expanded="false" aria-controls="scroll-down5"><span>Сроки выдачи</span></a>
+                  <a href="#" class="faq-list__btn collapsed" data-toggle="collapse" data-target="#scroll-down5" aria-expanded="false" aria-controls="scroll-down5"><span>На какой срок выдается виза?</span></a>
                   <div class="collapse" id="scroll-down5" data-parent="#accordion">
-                    <div class="faq-list__content">5</div>
+                    <div class="faq-list__content"><p>Виза выдается на срок до 5 лет в зависимости от выбора страны, вашей визовой истории и других факторов. <br> Проконсультируйтесь с нашим специалистом по тел.: 8(4932)77-36-22</p></div>
                   </div>
                 </li>
               </ul>
