--- a/src/index.pug
+++ b/src/index.pug
@@ -603,7 +603,7 @@ include template/head.pug
                       </div>
                       <div class="col-md-4 mb-3">
                         <div class="input pick">
-                          <div class="pick__btn">Кол-во человек</div>
+                          <div class="pick__btn">Кол-во человек<span class="pick__num"></span></div>
                           <div class="pick__content">
                             <div class="pick__content-holder">
                               <div class="amount">
