--- a/src/index.pug
+++ b/src/index.pug
@@ -141,7 +141,9 @@ include template/head.pug
               <div class="row">
                 <div class="col-sm-6 col-ml-4 which__item">
                   <div class="visa-direction visa-direction_schengen">
-                    <div class="visa-direction__illustr"></div>
+                    <div class="visa-direction__illustr">
+                      <img src="img/visa-direction/1_1.png" alt="">
+                    </div>
                     <div class="visa-direction__img" style="background-image: url(img/visa-direction/1.jpg)"></div>
                     <div class="visa-direction__holder">
                       <div class="visa-direction__content">
@@ -180,7 +182,10 @@ include template/head.pug
                 </div>
                 <div class="col-sm-6 col-ml-4 which__item">
                   <div class="visa-direction visa-direction_europe">
-                    <div class="visa-direction__illustr"></div>
+                    <div class="visa-direction__illustr">
+                      <img src="img/visa-direction/3_1.png" alt="">
+                      <img src="img/visa-direction/3_2.png" alt="">
+                    </div>
                     <div class="visa-direction__img" style="background-image: url(img/visa-direction/3.jpg)"></div>
                     <div class="visa-direction__holder">
                       <div class="visa-direction__content">
@@ -198,7 +203,10 @@ include template/head.pug
                 </div>
                 <div class="col-sm-6 col-ml-4 which__item">
                   <div class="visa-direction visa-direction_america">
-                    <div class="visa-direction__illustr"></div>
+                    <div class="visa-direction__illustr">
+                      <img src="img/visa-direction/4_1.png" alt="">
+                      <img src="img/visa-direction/4_2.png" alt="">
+                    </div>
                     <div class="visa-direction__img" style="background-image: url(img/visa-direction/4.jpg)"></div>
                     <div class="visa-direction__holder">
                       <div class="visa-direction__content">
@@ -216,7 +224,10 @@ include template/head.pug
                 </div>
                 <div class="col-sm-6 col-ml-4 which__item">
                   <div class="visa-direction visa-direction_oceania">
-                    <div class="visa-direction__illustr"></div>
+                    <div class="visa-direction__illustr">
+                      <img src="img/visa-direction/5_1.png" alt="">
+                      <img src="img/visa-direction/5_2.png" alt="">
+                    </div>
                     <div class="visa-direction__img" style="background-image: url(img/visa-direction/5.jpg)"></div>
                     <div class="visa-direction__holder">
                       <div class="visa-direction__content">
@@ -273,19 +284,19 @@ include template/head.pug
                 <ul class="difficulties__list">
                   <li>
                     <div class="difficulties__ico">
-                      +icon('dif-1')
+                      <img src="img/difficulties/ico/1.png" alt="">
                     </div>
                     <b>Можете не получить  визу вовсе</b>из-за неверно оформленных  документов
                   </li>
                   <li>
                     <div class="difficulties__ico">
-                      +icon('dif-2')
+                      <img src="img/difficulties/ico/2.png" alt="">
                     </div>
                     <b>Собираете пакет документов</b>Теряете неоплаченный  рабочий день
                   </li>
                   <li>
                     <div class="difficulties__ico">
-                      +icon('dif-3')
+                      <img src="img/difficulties/ico/3.png" alt="">
                     </div>
                     <b>Оплачиваете консульский</b>Оплачиваете консульский  сбор, сервисно-визовый сбор
                   </li>
@@ -311,23 +322,23 @@ include template/head.pug
                 <ul class="difficulties__list">
                   <li>
                     <div class="difficulties__ico">
-                      +icon('dif-4')
+                      <img src="img/difficulties/ico/4.png" alt="">
                     </div>
                     <b>Перевода  на английский язык</b>Часто для перевода  на английский язык нужен  сертифицированный переводчик
                   </li>
                   <li>
                     <div class="difficulties__ico">
-                      +icon('dif-5')
+                      <img src="img/difficulties/ico/5.png" alt="">
                     </div>
                     <b>Оплачиваете доставку</b>или повторную поездку в консульство
                   </li>
                   <li>
                     <div class="difficulties__ico">
-                      +icon('dif-6')
+                      <img src="img/difficulties/ico/6.png" alt="">
                     </div>
                     <b>Приходите в консульство</b>в Москве (траты на поездку  и транспорт)
                   </li>
-                </ul>
+                </ul>невесты / жениха
               </div>
             </div>
           </div>
