--- a/visavia/css/main.css
+++ b/visavia/css/main.css
@@ -1519,6 +1519,7 @@ button {
   top: 0;
   bottom: 0;
   z-index: -1;
+  pointer-events: none;
 }
 
 .visa-direction__illustr img {
@@ -1528,28 +1529,28 @@ button {
   opacity: 0;
 }
 
+.visa-direction__illustr img:first-of-type {
+  top: 0;
+  left: 0;
+}
+
+.visa-direction__illustr img:nth-of-type(2) {
+  top: 0;
+  right: 0;
+}
+
 .visa-direction:hover .visa-direction__illustr img {
   opacity: 1;
 }
 
-.visa-direction_asia .visa-direction__illustr img:first-of-type {
-  top: 20px;
-  left: 20px;
+.visa-direction:hover .visa-direction__illustr img:first-of-type {
+  top: -262px;
+  left: -200px;
 }
 
-.visa-direction_asia .visa-direction__illustr img:last-of-type {
-  top: 20px;
-  right: 20px;
-}
-
-.visa-direction_asia:hover .visa-direction__illustr img:first-of-type {
-  top: -210px;
-  left: -210px;
-}
-
-.visa-direction_asia:hover .visa-direction__illustr img:last-of-type {
-  top: -130px;
-  right: -110px;
+.visa-direction:hover .visa-direction__illustr img:nth-of-type(2) {
+  top: -262px;
+  right: -200px;
 }
 
 .visa-direction:before {
@@ -1722,40 +1723,6 @@ button {
 .difficulties__ico {
   text-align: center;
   margin-bottom: 20px;
-}
-
-.difficulties__ico svg {
-  fill: rgba(78, 71, 170, 0.6);
-}
-
-.difficulties__ico .icon-dif-1 {
-  width: 90px;
-  height: 90px;
-}
-
-.difficulties__ico .icon-dif-2 {
-  width: 84px;
-  height: 90px;
-}
-
-.difficulties__ico .icon-dif-3 {
-  width: 90px;
-  height: 101px;
-}
-
-.difficulties__ico .icon-dif-4 {
-  width: 90px;
-  height: 76px;
-}
-
-.difficulties__ico .icon-dif-5 {
-  width: 90px;
-  height: 103px;
-}
-
-.difficulties__ico .icon-dif-6 {
-  width: 90px;
-  height: 86px;
 }
 
 .difficulties__content {
